# python-image-generation

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
notebooks/: 1-2_text-to-image-generation.ipynb  2-2_activation-function.ipynb  2-2_pytorch.ipynb  2-3_transformer.ipynb  3-2-1_ddpm.ipynb  3-2-2_ddim.ipynb  3-3_ncsn.ipynb  3-4_classifier-free-guidance.ipynb  4-2_clip.ipynb  4-3_stable-diffusion_components.ipynb  4-4_stable-diffusion-v1.ipynb  4-5_stable-diffusion-v2.ipynb  4-6_stable-diffusion-xl.ipynb  4-7_stable-diffusion-v3.ipynb  5-1-1_textual-inversion.ipynb  5-1-2_dreambooth.ipynb  5-2-1_attend-and-excite.ipynb  5-2-2_controlnet.ipynb  5-3-1_prompt-to-prompt.ipynb  5-3-2_instruct-pix2pix.ipynb  5-3-3_paint-by-example.ipynb  5-4-1_lora.ipynb  5-4-2_latent-consistency-model.ipynb  5-5-1_gligen.ipynb  5-5-2_sdxl-turbo.ipynb  5-6-1_safe-latent-diffusion.ipynb  5-6-2_text-to-image-model-editing.ipynb
scripts/: 1-2_text-to-image-generation.py  2-2_activation-function.py  2-2_pytorch.py  2-3_transformer.py  3-2-1_ddpm.py  3-2-2_ddim.py  3-3_ncsn.py  3-4_classifier-free-guidance.py  4-2_clip.py  4-3_stable-diffusion_components.py  4-4_stable-diffusion-v1.py  4-5_stable-diffusion-v2.py  4-6_stable-diffusion-xl.py  4-7_stable-diffusion-v3.py  5-1-1_textual-inversion.py  5-1-2_dreambooth.py  5-2-1_attend-and-excite.py  5-2-2_controlnet.py  5-3-1_prompt-to-prompt.py  5-3-2_instruct-pix2pix.py  5-3-3_paint-by-example.py  5-4-1_lora.py  5-4-2_latent-consistency-model.py  5-5-1_gligen.py  5-5-2_sdxl-turbo.py  (+2 more)
(+27 files in other folders)
